--- a/IPcalc/MainWindow.xaml
+++ b/IPcalc/MainWindow.xaml
@@ -6,42 +6,48 @@
         xmlns:local="clr-namespace:IPcalc"
         mc:Ignorable="d"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-        Title="Калькулятор IP-адресов" Height="450" Width="800">
+        Title="Калькулятор IP-адресов" Height="280" Width="400">
     <Grid>
 
-        <Grid Margin="5">
+        <Grid Margin="20">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
-                <RowDefinition Height="*"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <Grid Grid.Row="1">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="80"/>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="80"/>
-                    <ColumnDefinition Width="*"/>
-                    
-                </Grid.ColumnDefinitions>
 
-                <TextBlock Text="IP-адрес" VerticalAlignment="Center" Margin="0,5"/>
-                <xctk:MaskedTextBox Grid.Column="1" Margin="5"
-                                    Name="IpTextBox"
-                                    Mask="###.###.###.###"
-                                    PromptChar="_"
-                                    Width="150"/>
+            <StackPanel Grid.Row="1" Orientation="Horizontal" Margin="0,5">
+                <Label Content="IP-адрес:" Width="80"/>
+                <xctk:MaskedTextBox  Margin="5"
+                     Name="IpTextBox"
+                     Mask="###.###.###.###"
+                     PromptChar="_"
+                     Width="80"/>
+            </StackPanel>
+            <StackPanel Grid.Row="2" Orientation="Horizontal" Margin="0,5">
+                <Label Content="Маска сети:" Width="80" VerticalAlignment="Center" />
+                <xctk:MaskedTextBox Margin="5"
+                     Name="MaskTextBox"
+                     Mask="###.###.###.###"
+                     PromptChar="_"
+                     Width="80"/>
+                <Label Content="Префикс:" Width="80" VerticalAlignment="Center" Margin="15,0,0,0" />
+                <xctk:IntegerUpDown x:Name="Spin" Minimum="0" Maximum="32"
+                                    Width="50"
+                                    Height="20"/>
+            </StackPanel>
 
-                <TextBlock Text="Префикс" Grid.Column="2" Margin="10,5,0,5" VerticalAlignment="Center"/>
-                <xctk:MaskedTextBox Grid.Row="1" Grid.Column="1" Margin="5"
-                                    Name="MaskTextBox"
-                                    Mask="###.###.###.###"
-                                    PromptChar="_"
-                                    Width="150"/>
-
-            </Grid>
+            <TextBlock Grid.Row="3" x:Name="InfoTextBlock" Margin="0,20,0,0" TextWrapping="Wrap">
+                Info:
+            </TextBlock>
+            <StackPanel Orientation="Horizontal" Grid.Row="6" HorizontalAlignment="Right" Margin="0,10,0,0">
+                <Button Content="OK" Width="75" Margin="5"/>
+                <Button Content="Cancel" Width="75" Margin="5" Click="OnCancelClicked"/>
+            </StackPanel>
         </Grid>
     </Grid>
 </Window>
