--- a/IPcalc/MainWindow.xaml
+++ b/IPcalc/MainWindow.xaml
@@ -1,54 +1,36 @@
-﻿<Window x:Class="IPcalc.MainWindow"
+﻿<Window x:Class="IPCalculatorWPF.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:IPcalc"
-        mc:Ignorable="d"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-        Title="Калькулятор IP-адресов" Height="280" Width="400">
-    <Grid>
+        Title="Калькулятор IP-адресов" Height="300" Width="400">
+    <Grid Margin="10">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
 
-        <Grid Margin="20">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="Auto"/>
-            </Grid.RowDefinitions>
+        <StackPanel Orientation="Horizontal" Margin="0,5">
+            <Label Content="IP-адрес:" Width="80"/>
+            <TextBox x:Name="IpTextBox" Width="150" LostFocus="OnIpAddressChanged"/>
+        </StackPanel>
 
-            <StackPanel Grid.Row="1" Orientation="Horizontal" Margin="0,5">
-                <Label Content="IP-адрес:" Width="80"/>
-                <xctk:MaskedTextBox  Margin="5" LostFocus="IpChanged"
-                     Name="IpTextBox"
-                     Mask="###.###.###.###"
-                     PromptChar="_"
-                     Width="80"/>
-            </StackPanel>
-            <StackPanel Grid.Row="2" Orientation="Horizontal" Margin="0,5">
-                <Label Content="Маска сети:" Width="80" VerticalAlignment="Center" />
-                <xctk:MaskedTextBox Margin="5"
-                     Name="MaskTextBox"
-                     Mask="###.###.###.###"
-                     PromptChar="_"
-                     Width="80"/>
-                <Label Content="Префикс:" Width="80" VerticalAlignment="Center" Margin="15,0,0,0" />
-                <xctk:IntegerUpDown x:Name="Spin" Minimum="0" Maximum="32"
-                                    Value="24"
-                                    Width="50"
-                                    Height="20"/>
-            </StackPanel>
+        <StackPanel Orientation="Horizontal" Margin="0,5" Grid.Row="1">
+            <Label Content="Маска:" Width="80"/>
+            <TextBox x:Name="MaskTextBox" Width="150" LostFocus="MaskTextBox_LostFocus"/>
+            <Label Content="Префикс:" Margin="10,0"/>
+            <xctk:IntegerUpDown x:Name="PrefixBox" Minimum="1" Maximum="30"
+                                ValueChanged="PrefixBox_ValueChanged"
+                                Width="50"/>
+        </StackPanel>
 
-            <TextBlock Grid.Row="3" x:Name="InfoTextBlock" Margin="0,20,0,0" TextWrapping="Wrap">
-                Info:
-            </TextBlock>
-            <StackPanel Orientation="Horizontal" Grid.Row="6" HorizontalAlignment="Right" Margin="0,10,0,0">
-                <Button Content="OK" Width="75" Margin="5"/>
-                <Button Content="Cancel" Width="75" Margin="5" Click="OnCancelClicked"/>
-            </StackPanel>
-        </Grid>
+        <TextBlock x:Name="InfoTextBlock" Grid.Row="2" Margin="0,10" TextWrapping="Wrap"/>
+
+        <StackPanel Orientation="Horizontal" Grid.Row="4" HorizontalAlignment="Right" Margin="0,10,0,0">
+            <Button Content="OK" Width="75" Margin="5" Click="OnOkClicked"/>
+            <Button Content="Cancel" Width="75" Margin="5" Click="OnCancelClicked"/>
+        </StackPanel>
     </Grid>
 </Window>
