--- a/IPcalc/MainWindow.xaml
+++ b/IPcalc/MainWindow.xaml
@@ -14,7 +14,10 @@
 
         <StackPanel Orientation="Horizontal" Margin="0,5">
             <Label Content="IP-адрес:" Width="80"/>
-            <TextBox x:Name="IpTextBox" Width="150" LostFocus="OnIpAddressChanged"/>
+            <TextBox x:Name="IpTextBox" 
+                     Width="150" 
+                     LostFocus="OnIpAddressChanged"
+                     TextChanged="IpTextBoxChanged"/>
         </StackPanel>
 
         <StackPanel Orientation="Horizontal" Margin="0,5" Grid.Row="1">
