--- a/IPcalc/MainWindow.xaml
+++ b/IPcalc/MainWindow.xaml
@@ -3,12 +3,12 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:view="clr-namespace:IPCalculatorWPF.View"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         mc:Ignorable="d"
-        Title="IP Calculator" Height="330" Width="450">
+        Title="IP Calculator" Height="330" Width="400">
     <Grid Margin="10">
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
@@ -16,38 +16,46 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Center">
-            <Label Content="IP-Адрес" VerticalAlignment="Center" FontWeight="Bold"/>
-            <TextBox x:Name="FirstOctet" Width="40" MaxLength="3" FontSize="12" VerticalContentAlignment="Center" TextAlignment="Center" TextChanged="Octet_TextChanged"/>
-            <Label Content="." VerticalAlignment="Center"/>
-            <TextBox x:Name="SecondOctet" Width="40" MaxLength="3" FontSize="12" VerticalContentAlignment="Center" TextAlignment="Center" TextChanged="Octet_TextChanged"/>
-            <Label Content="." VerticalAlignment="Center"/>
-            <TextBox x:Name="ThirdOctet" Width="40" MaxLength="3" FontSize="12" VerticalContentAlignment="Center" TextAlignment="Center" TextChanged="Octet_TextChanged"/>
-            <Label Content="." VerticalAlignment="Center"/>
-            <TextBox x:Name="FourthOctet" Width="40" MaxLength="3" FontSize="12" VerticalContentAlignment="Center" TextAlignment="Center" TextChanged="Octet_TextChanged"/>
-            <Label Width="50"/>
-            <Label Width="90"/>
+        <view:IpAddressInput x:Name="IpAddressControl" 
+                             Header="IP-Адрес" 
+                             OctetChanged="IpAddress_OctetChanged"/>
+
+        <view:IpAddressInput x:Name="SubnetMaskControl" 
+                             Grid.Row="1" 
+                             Header="Маска" 
+                             OctetChanged="SubnetMask_OctetChanged" 
+                             Margin="0,10,0,0"/>
+
+        <StackPanel Grid.Row="2" 
+                    Orientation="Horizontal" 
+                    HorizontalAlignment="Center" 
+                    Margin="0,10,0,0">
+            <Label Content="Префикс:" 
+                   VerticalAlignment="Center" 
+                   FontWeight="Bold"/>
+            <xctk:IntegerUpDown x:Name="PrefixBox" 
+                                Minimum="0" Maximum="32" 
+                                Width="50" FontSize="12" 
+                                TextAlignment="Center" 
+                                ValueChanged="PrefixBox_ValueChanged"/>
         </StackPanel>
 
-        <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10,0,0">
-            <Label Content="Macka" VerticalAlignment="Center" FontWeight="Bold"/>
-            <TextBox x:Name="MaskFirstOctet" Width="40" MaxLength="3" FontSize="12" VerticalContentAlignment="Center" TextAlignment="Center" TextChanged="MaskOctet_TextChanged"/>
-            <Label Content="." VerticalAlignment="Center"/>
-            <TextBox x:Name="MaskSecondOctet" Width="40" MaxLength="3" FontSize="12" VerticalContentAlignment="Center" TextAlignment="Center" TextChanged="MaskOctet_TextChanged"/>
-            <Label Content="." VerticalAlignment="Center"/>
-            <TextBox x:Name="MaskThirdOctet" Width="40" MaxLength="3" FontSize="12" VerticalContentAlignment="Center" TextAlignment="Center" TextChanged="MaskOctet_TextChanged"/>
-            <Label Content="." VerticalAlignment="Center"/>
-            <TextBox x:Name="MaskFourthOctet" Width="40" MaxLength="3" FontSize="12" VerticalContentAlignment="Center" TextAlignment="Center" TextChanged="MaskOctet_TextChanged"/>
-            <Label Width="30" VerticalAlignment="Center"/>
-            <Label Content="Prefix:" VerticalAlignment="Center" FontWeight="Bold"/>
-            <xctk:IntegerUpDown x:Name="PrefixBox" Minimum="0" Maximum="32" Width="50" FontSize="12" TextAlignment="Center" ValueChanged="PrefixBox_ValueChanged"/>
-        </StackPanel>
+        <TextBox Grid.Row="3" 
+                 x:Name="InfoTextBlock" 
+                 Margin="0,20,0,0" 
+                 TextWrapping="Wrap" 
+                 VerticalScrollBarVisibility="Auto" 
+                 VerticalContentAlignment="Top" 
+                 IsReadOnly="True"/>
 
-        <TextBox Grid.Row="3" x:Name="InfoTextBlock" Margin="0,20,0,0" Height="150" FontSize="12" TextWrapping="Wrap" 
-                 VerticalScrollBarVisibility="Auto"  IsReadOnly="True"/>
-
-        <StackPanel Grid.Row="5" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
-            <Button Content="Cancel" Width="80" Margin="0,0,10,0" Click="OnCancelClicked"/>
+        <StackPanel Grid.Row="4" 
+                    Orientation="Horizontal" 
+                    HorizontalAlignment="Right" 
+                    Margin="0,10,0,0">
+            <Button Content="Отмена" 
+                    Width="80" 
+                    Margin="0,0,10,0" 
+                    Click="OnCancelClicked"/>
         </StackPanel>
     </Grid>
 </Window>
