--- a/IPcalc/View/IpAddressInput.xaml
+++ b/IPcalc/View/IpAddressInput.xaml
@@ -4,15 +4,23 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
-             d:DesignHeight="30" d:DesignWidth="300">
+             d:DesignHeight="30" d:DesignWidth="300"
+             x:Name="root">
     <StackPanel Orientation="Horizontal">
-        <Label Content="{Binding Header}" VerticalAlignment="Center" FontWeight="Bold" MinWidth="60"/>
-        <TextBox x:Name="FirstOctet" Width="40" MaxLength="3" FontSize="12" VerticalContentAlignment="Center" TextAlignment="Center"/>
+        <Label Content="{Binding Header, ElementName=root}" 
+               VerticalAlignment="Center" 
+               FontWeight="Bold" 
+               MinWidth="60"/>
+        <TextBox x:Name="FirstOctet" Width="40" MaxLength="3" FontSize="12" 
+                VerticalContentAlignment="Center" TextAlignment="Center"/>
         <Label Content="." VerticalAlignment="Center"/>
-        <TextBox x:Name="SecondOctet" Width="40" MaxLength="3" FontSize="12" VerticalContentAlignment="Center" TextAlignment="Center"/>
+        <TextBox x:Name="SecondOctet" Width="40" MaxLength="3" FontSize="12" 
+                VerticalContentAlignment="Center" TextAlignment="Center"/>
         <Label Content="." VerticalAlignment="Center"/>
-        <TextBox x:Name="ThirdOctet" Width="40" MaxLength="3" FontSize="12" VerticalContentAlignment="Center" TextAlignment="Center"/>
+        <TextBox x:Name="ThirdOctet" Width="40" MaxLength="3" FontSize="12" 
+                VerticalContentAlignment="Center" TextAlignment="Center"/>
         <Label Content="." VerticalAlignment="Center"/>
-        <TextBox x:Name="FourthOctet" Width="40" MaxLength="3" FontSize="12" VerticalContentAlignment="Center" TextAlignment="Center"/>
+        <TextBox x:Name="FourthOctet" Width="40" MaxLength="3" FontSize="12" 
+                VerticalContentAlignment="Center" TextAlignment="Center"/>
     </StackPanel>
 </UserControl>
